k8s/laravel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: laravel-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: laravel
  template:
    metadata:
      labels:
        app: laravel
    spec:
      containers:
        - name: laravel
          image: laravel-k8s:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 9001
---
apiVersion: v1
kind: Service
metadata:
  name: laravel-app
spec:
  selector:
    app: laravel
  ports:
    - protocol: TCP
      port: 9001
      targetPort: 9001
