k8s/phpmyadmin.yaml
# phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin
  namespace: laravel-app
spec:
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        image: phpmyadmin/phpmyadmin
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 256Mi
            cpu: "0.2"
          requests:
            memory: 128Mi
            cpu: "0.1"
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-service
  namespace: laravel-app
spec:
  type: LoadBalancer
  ports:
  - port: 8081  # Using port 8081 to avoid conflicts with your existing services
    targetPort: 80
  selector:
    app: phpmyadmin
